# AMMroi

./: .gitignore  CNAME  Pipfile  bancor.html  data.py  index.html  protections.html  pyproject.toml  readme.md  script.sh
Gathers/: bancor.py  bancor_init.py  bancor_parser.py  sushiswap.py  uniswapv2.py  uniswapv2_alt.py
Gathers/archive/: sushiswap_old.py
data/bancor/: abi.json  converters.csv  files.json  parsedProtection181220.csv  parsedProtection291220.csv  pool_path.bak.json  pool_path.json  pool_tokens.json  pools.json  tokens.csv  tokens.json
data/bancor/roi/: AAVEBNT.csv  AAVEBNT.parsed.csv  AAVEBNT.raw.csv  ALEPHBNT.csv  ALEPHBNT.raw.csv  ALPHABNT.csv  ALPHABNT.raw.csv  AMPBNT.csv  AMPBNT.raw.csv  ANTBNT.csv  ANTBNT.parsed.csv  ANTBNT.raw.csv  ARMORBNT.csv  ARMORBNT.raw.csv  AXSBNT.csv  AXSBNT.raw.csv  BANDBNT.csv  BANDBNT.raw.csv  BATBNT.csv  BATBNT.raw.csv  BNBBNT.csv  BNBBNT.raw.csv  BONDBNT.csv  BONDBNT.raw.csv  BUSDBNT.raw.csv  BZRXBNT.csv  BZRXBNT.raw.csv  CELBNT.csv  CELBNT.raw.csv  CHERRYBNT.csv  CHERRYBNT.raw.csv  COMPBNT.csv  COMPBNT.raw.csv  CRVBNT.csv  CRVBNT.raw.csv  DAIBNT.csv  DAIBNT.parsed.csv  DAIBNT.raw.csv  DXDBNT.csv  DXDBNT.raw.csv  (+95 more)
data/sushiswap/: files.json  tokens.json
data/sushiswap/roi/: akro&weth.csv  aleph&weth.csv  alpha&weth.csv  ant&weth.csv  api3&weth.csv  arch&weth.csv  armor&dai.csv  armor&weth.csv  arnxm&weth.csv  axs&weth.csv  band&weth.csv  bao&dai.csv  bao&usdc.csv  bao&weth.csv  bor&weth.csv  comp&weth.csv  (+85 more)
data/uniswapv2/: files.json  tokens copy.json  tokens.json
js/: abi.js  bancor.js  bnt.js  index.js
(+449 files in other folders)
