[tool.poetry]
name = "ammroi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
gql = "3.0.0a1"
web3 = "5.10.0"
python-dateutil = "^2.8.1"
pandas = "^1.1.5"
numpy = "^1.19.4"
python-binance = "^0.7.5"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
rope = "^0.18.0"
pep8 = "^1.7.1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
